--- a/2_EDA_and_Modelling.ipynb
+++ b/2_EDA_and_Modelling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "max     209.942000  486187.000000        5.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
        "array(['calm', 'energetic', 'happy', 'sad'], dtype=object)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,16 +1146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn with 10 nn:  0.4999776035834267\n",
-      "knn with 20 nn:  0.523919372900336\n",
-      "knn with 100 nn:  0.5084359835759612\n"
+      "knn with 10 nn:  0.4999850690556178\n",
+      "knn with 20 nn:  0.5211048898842852\n",
+      "knn with 100 nn:  0.5091377379619261\n"
      ]
     }
    ],
@@ -1194,17 +1194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf with 100 trees:  0.5429189996267264\n",
-      "rf with 100 trees:  0.5414333706606943\n",
-      "rf with 200 trees:  0.5436207540126913\n",
-      "rf with 500 trees:  0.5400671892497201\n"
+      "rf with 100 trees:  0.5435834266517358\n",
+      "rf with 200 trees:  0.5541843971631205\n",
+      "rf with 500 trees:  0.5435908921239269\n"
      ]
     }
    ],
@@ -1238,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1380,16 +1379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn with 10 nn:  0.4964165733482643\n",
-      "knn with 20 nn:  0.5063232549458754\n",
-      "knn with 100 nn:  0.5077118327734229\n"
+      "knn with 10 nn:  0.49782754759238523\n",
+      "knn with 20 nn:  0.5056065696155282\n",
+      "knn with 100 nn:  0.5084135871593878\n"
      ]
     }
    ],
@@ -1414,16 +1413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf with 100 trees:  0.5343934303844718\n",
-      "rf with 200 trees:  0.5386188876446435\n",
-      "rf with 500 trees:  0.5329451287793953\n"
+      "rf with 100 trees:  0.5414259051885032\n",
+      "rf with 200 trees:  0.5329675251959687\n",
+      "rf with 500 trees:  0.5350877192982456\n"
      ]
     }
    ],
@@ -1450,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,27 +1474,163 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#SVM \n",
-    "#using radial kernel\n",
-    "from sklearn import svm\n",
-    "rbf = svm.SVC(kernel='rbf', gamma=0.5, C=0.1).fit(features_df, y)"
+    "### SVM"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### logistic regression"
+    "Doing a train_test_split to use GridSearch and find optimized parameters C and Gamma for Radial Kernel SVM."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
+      "[CV] END .....................................C=0.1, gamma=1; total time=   0.0s\n",
+      "[CV] END .....................................C=0.1, gamma=1; total time=   0.0s\n",
+      "[CV] END .....................................C=0.1, gamma=1; total time=   0.0s\n",
+      "[CV] END .....................................C=0.1, gamma=1; total time=   0.0s\n",
+      "[CV] END .....................................C=0.1, gamma=1; total time=   0.0s\n",
+      "[CV] END ...................................C=0.1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=0.1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=0.1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=0.1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=0.1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ..................................C=0.1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=0.1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=0.1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=0.1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=0.1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END .................................C=0.1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=0.1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=0.1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=0.1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=0.1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .......................................C=1, gamma=1; total time=   0.0s\n",
+      "[CV] END .......................................C=1, gamma=1; total time=   0.0s\n",
+      "[CV] END .......................................C=1, gamma=1; total time=   0.0s\n",
+      "[CV] END .......................................C=1, gamma=1; total time=   0.0s\n",
+      "[CV] END .......................................C=1, gamma=1; total time=   0.0s\n",
+      "[CV] END .....................................C=1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END .....................................C=1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END .....................................C=1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END .....................................C=1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END .....................................C=1, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ....................................C=1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ....................................C=1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ....................................C=1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ....................................C=1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ....................................C=1, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ...................................C=1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ...................................C=1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ...................................C=1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ...................................C=1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ...................................C=1, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ......................................C=10, gamma=1; total time=   0.0s\n",
+      "[CV] END ......................................C=10, gamma=1; total time=   0.0s\n",
+      "[CV] END ......................................C=10, gamma=1; total time=   0.0s\n",
+      "[CV] END ......................................C=10, gamma=1; total time=   0.0s\n",
+      "[CV] END ......................................C=10, gamma=1; total time=   0.0s\n",
+      "[CV] END ....................................C=10, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ....................................C=10, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ....................................C=10, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ....................................C=10, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ....................................C=10, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=10, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ...................................C=10, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ...................................C=10, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ...................................C=10, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ...................................C=10, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=10, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ..................................C=10, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ..................................C=10, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ..................................C=10, gamma=0.001; total time=   0.0s\n",
+      "[CV] END ..................................C=10, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .....................................C=100, gamma=1; total time=   0.1s\n",
+      "[CV] END .....................................C=100, gamma=1; total time=   0.1s\n",
+      "[CV] END .....................................C=100, gamma=1; total time=   0.1s\n",
+      "[CV] END .....................................C=100, gamma=1; total time=   0.1s\n",
+      "[CV] END .....................................C=100, gamma=1; total time=   0.1s\n",
+      "[CV] END ...................................C=100, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=100, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=100, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=100, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ...................................C=100, gamma=0.1; total time=   0.0s\n",
+      "[CV] END ..................................C=100, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=100, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=100, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=100, gamma=0.01; total time=   0.0s\n",
+      "[CV] END ..................................C=100, gamma=0.01; total time=   0.0s\n",
+      "[CV] END .................................C=100, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=100, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=100, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=100, gamma=0.001; total time=   0.0s\n",
+      "[CV] END .................................C=100, gamma=0.001; total time=   0.0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train,y_test = train_test_split(features_df, y, test_size=0.2, random_state=42)\n",
+    "# Define the parameter grid \n",
+    "param_grid = {'C': [0.1, 1, 10, 100], 'gamma': [1, 0.1, 0.01, 0.001]} \n",
+    "\n",
+    "# Create a grid search object \n",
+    "grid = GridSearchCV(svm.SVC(), param_grid, refit=True, verbose=2) \n",
+    "\n",
+    "# Fit the grid search object to the training data \n",
+    "grid.fit(X_train, y_train) \n",
+    "\n",
+    "# Get the best parameters \n",
+    "best_params_ = grid.best_params_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5548189622993654"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#SVM \n",
+    "#using radial kernel\n",
+    "clf_svm = svm.SVC(kernel='rbf', C=best_params_['C'], gamma=best_params_['gamma'],random_state=42)\n",
+    "stat.mean(cross_val_score(clf_svm, features_df,y, cv = 15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1515,18 +1650,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "* All models are performing similarly. Let us try using Deep Learning to see if it is better at predicting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Deep Learning for Multi Class Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "spotify",
    "language": "python",
-   "name": "python3"
+   "name": "spotify"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1538,7 +1685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
